k8s/04-network/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: egi-ingress
  namespace: egi-inventario
spec:
  ingressClassName: nginx
  rules:
  - host: egi-inventario.local
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: egi-backend
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: egi-frontend
            port:
              number: 80
